<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">互诺科技</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <!-- 下拉刷新 -->
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开后刷新</string>
    <string name="pull_to_refresh_refreshing_label">刷新中\u2026</string>
    <string name="pull_to_refresh_footer_release_label">松开后加载</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_footer_refreshing_label">加载中\u2026</string>

    <!-- 产品服务 -->
    <string name="proudct_text_1">企业网站建设</string>
    <string name="proudct_text_2">品牌网站建设</string>
    <string name="proudct_text_3">互动营销网站</string>
    <string name="proudct_text_4">商城营销网站</string>
    <string name="proudct_text_5">移动APP类</string>
    <string name="proudct_text_6">安卓开发</string>
    <string name="proudct_text_7">IOS开发</string>
    <string name="proudct_text_8">微信营销</string>

    <!-- 提示语 -->
    <string name="net_error">请检查网络</string>
    <string name="loading">加载中…</string>

</resources>