<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <include layout="@layout/top" />
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#e4e4e4"
        android:orientation="vertical" >
        
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:orientation="horizontal"
            android:gravity="center">
            
            <LinearLayout
                android:id="@+id/product_business"
                android:layout_width="fill_parent"
	            android:layout_height="fill_parent"
	            android:background="#ffffff"
	            android:layout_margin="0.1dp"
	            android:layout_weight="1.0"
	            android:orientation="vertical"
	            android:gravity="center">
	            
	            <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:src="@drawable/service_button_1" />
	            
	            <TextView 
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:gravity="center"
	                android:text="@string/proudct_text_1"
	                android:textSize="16sp"
	                android:textColor="#5f5f5f"/>
	            
	        </LinearLayout>
	        
            <LinearLayout
                android:id="@+id/product_brand"
                android:layout_width="fill_parent"
	            android:layout_height="fill_parent"
	            android:background="#ffffff"
	            android:layout_margin="0.1dp"
	            android:layout_weight="1.0"
	            android:orientation="vertical"
	            android:gravity="center">
	            
	            <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:src="@drawable/service_button_2" />
	            
	            <TextView 
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:gravity="center"
	                android:text="@string/proudct_text_2"
	                android:textSize="16sp"
	                android:textColor="#5f5f5f"/>
	            
	        </LinearLayout>
	        
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:orientation="horizontal"
            android:gravity="center">
            
            <LinearLayout
                android:id="@+id/product_interactive"
                android:layout_width="fill_parent"
	            android:layout_height="fill_parent"
	            android:background="#ffffff"
	            android:layout_margin="0.1dp"
	            android:layout_weight="1.0"
	            android:orientation="vertical"
	            android:gravity="center">
	            
	            <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:src="@drawable/service_button_3" />
	            
	            <TextView 
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:gravity="center"
	                android:text="@string/proudct_text_3"
	                android:textSize="16sp"
	                android:textColor="#5f5f5f"/>
	            
	        </LinearLayout>
	        
            <LinearLayout
                android:id="@+id/product_mall"
                android:layout_width="fill_parent"
	            android:layout_height="fill_parent"
	            android:background="#ffffff"
	            android:layout_margin="0.1dp"
	            android:layout_weight="1.0"
	            android:orientation="vertical"
	            android:gravity="center">
	            
	            <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:src="@drawable/service_button_4" />
	            
	            <TextView 
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:gravity="center"
	                android:text="@string/proudct_text_4"
	                android:textSize="16sp"
	                android:textColor="#5f5f5f"/>
	            
	        </LinearLayout>
	        
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:orientation="horizontal"
            android:gravity="center">
            
            <LinearLayout
                android:id="@+id/product_mobile"
                android:layout_width="fill_parent"
	            android:layout_height="fill_parent"
	            android:background="#ffffff"
	            android:layout_margin="0.1dp"
	            android:layout_weight="1.0"
	            android:orientation="vertical"
	            android:gravity="center">
	            
	            <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:src="@drawable/service_button_5" />
	            
	            <TextView 
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:gravity="center"
	                android:text="@string/proudct_text_5"
	                android:textSize="16sp"
	                android:textColor="#5f5f5f"/>
	            
	        </LinearLayout>
	        
            <LinearLayout
                android:id="@+id/product_android"
                android:layout_width="fill_parent"
	            android:layout_height="fill_parent"
	            android:background="#ffffff"
	            android:layout_margin="0.1dp"
	            android:layout_weight="1.0"
	            android:orientation="vertical"
	            android:gravity="center">
	            
	            <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:src="@drawable/service_button_6" />
	            
	            <TextView 
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:gravity="center"
	                android:text="@string/proudct_text_6"
	                android:textSize="16sp"
	                android:textColor="#5f5f5f"/>
	            
	        </LinearLayout>
	        
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:orientation="horizontal"
            android:gravity="center">
            
            <LinearLayout
                android:id="@+id/product_ios"
                android:layout_width="fill_parent"
	            android:layout_height="fill_parent"
	            android:background="#ffffff"
	            android:layout_margin="0.1dp"
	            android:layout_weight="1.0"
	            android:orientation="vertical"
	            android:gravity="center">
	            
	            <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:src="@drawable/service_button_7" />
	            
	            <TextView 
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:gravity="center"
	                android:text="@string/proudct_text_7"
	                android:textSize="16sp"
	                android:textColor="#5f5f5f"/>
	            
	        </LinearLayout>
	        
            <LinearLayout
                android:id="@+id/product_weixin"
                android:layout_width="fill_parent"
	            android:layout_height="fill_parent"
	            android:background="#ffffff"
	            android:layout_margin="0.1dp"
	            android:layout_weight="1.0"
	            android:orientation="vertical"
	            android:gravity="center">
	            
	            <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:src="@drawable/service_button_8" />
	            
	            <TextView 
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:gravity="center"
	                android:text="@string/proudct_text_8"
	                android:textSize="16sp"
	                android:textColor="#5f5f5f"/>
	            
	        </LinearLayout>
	        
        </LinearLayout>
        
    </LinearLayout>

</LinearLayout>
